Corrects overlapping text in skills box

--- a/src/styles/components/About.scss
+++ b/src/styles/components/About.scss
@@ -1,7 +1,7 @@
-.skills-icons-container {
-  display: flex;
-  flex-wrap: wrap;
-}
+// .skills-icons-container {
+//   display: flex;
+//   flex-wrap: wrap;
+// }
 
 .skills-icons-col {
   height: 70px;  
