--- a/src/styles/components/Projects.scss
+++ b/src/styles/components/Projects.scss
@@ -1,5 +1,6 @@
 .projects-image {
 max-width: 280px;
 height: auto;
+margin-bottom: 10px;
 }
 
