--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,6 +10,9 @@
 
 .main {
   margin-left: 200px;  
+  border-left: 2px solid black;
+  border-right: 0;
+  border-bottom: 0;
 }
 
 @media (max-width: 767px) {
